web: fix icon flashing in header, fix notification header icon in dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -127,7 +127,8 @@ body {
     .pf-c-page__main-section {
         --pf-c-page__main-section--BackgroundColor: var(--ak-dark-background);
     }
-    .sidebar-trigger {
+    .sidebar-trigger,
+    .notification-trigger {
         background-color: var(--ak-dark-background-light) !important;
     }
     .pf-c-page__main-section.pf-m-light {
